--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,8 +9,8 @@
   border-radius: 10px;
 }
 .cardTemplate {
-  height: 300px;
-  width: 300px;
+  height: 450px;
+  width: 400px;
 }
 .labelClass {
   font-size: 22px;
@@ -21,4 +21,14 @@
 .flexClassY {
   display: flex;
   flex-direction: column;
+}
+.warningMessage {
+  margin-top: 20px;
+  font-size: 22px;
+  color: red;
+}
+.logoStyle {
+  height: 250px;
+  width: 250px;
+  align-self: center;
 }
