--- a/src/app/scorecard/scorecard.component.css
+++ b/src/app/scorecard/scorecard.component.css
@@ -1,12 +1,11 @@
 .parentClass {
   display: flex;
+  flex-direction: column;
   padding-top: 5%;
-  justify-content: center;
+  align-items: center;
 }
 .childClass {
   padding: 10px;
-  border: 1px solid;
-  border-radius: 10px;
 }
 
 .imgStyle {
@@ -23,6 +22,6 @@
   flex-direction: column;
   align-items: center;
 }
-.labelClass {
+.headerClass {
   font-size: 22px;
 }
